--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Assets/Packages/LayredGlow"]
 	path = Assets/Packages/LayredGlow
 	url = https://github.com/nobnak/LayredGlow.git
+[submodule "Assets/Packages/Gist"]
+	path = Assets/Packages/Gist
+	url = https://github.com/nobnak/Gist.git
